--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,7 @@
             <option value="">Select your department…</option>
             <option value="Sales">Sales</option>
             <option value="Retention">Retention</option>
-            <option value="Account Management">Account Management</option>
-            <option value="Marketing">Marketing</option>
-            <option value="Support">Support</option>
-            <option value="Operations">Operations</option>
+            <option value="Customer Success">Customer Success</option>
             <option value="Other">Other</option>
           </select>
           <div class="field-error" id="err-department"></div>
