--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -134,7 +134,9 @@ function showToast(msg, type = 'success') {
 }
 
 function formatDate(iso) {
-  const d = new Date(iso);
+  if (!iso) return '—';
+  const d = new Date(iso.replace(' ', 'T'));
+  if (isNaN(d.getTime())) return '—';
   return d.toLocaleDateString('en-US', { month: 'short', day: 'numeric', year: 'numeric' });
 }
 
