rename heading to Website Intake Form

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </nav>
 
 <div class="page">
-  <h1>New Site Launch Request</h1>
+  <h1>Website Intake Form</h1>
   <p class="subtitle">Fill out the form below to submit a new customer site for launch tracking.</p>
 
   <div class="card" id="form-card">
